[project]
name = "neo4j-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "jupyter>=1.1.1",
    "jupytext>=1.19.1",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-neo4j>=0.8.0",
    "langchain-ollama>=1.0.1",
    "mcp>=1.26.0",
    "notebook>=7.5.4",
]
